--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^2.2.4",
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-modal-service": "^0.9.10"
   }
 }
